fix(delivery): configurar porta e cors por ambiente